fixed cockpit sheet visualization problem on ie11

--- a/knowage/web-content/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/web-content/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -1136,6 +1136,11 @@
 			md-tab-item:only-of-type {
 				display: none
 			} 
+			&.highlander {
+				md-tab-item {
+					display: none;
+				}
+			}
 		}
 	}
 
